--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 author: Yuan
 description: Be yourself
-url: http://www.macyo.com
+url: http://macyo.com
 title: 心有灵
 subtitle: Be yourself!
 gravatar_url: https://s.gravatar.com/avatar/1a8b7271f08436f4e5ef60d9b14dca54
